--- a/src/components/OnePost/OnePost.css
+++ b/src/components/OnePost/OnePost.css
@@ -9,7 +9,7 @@
   display: flex;
   justify-content: space-around;
   padding: 2px;
-  background-color: lightblue;
+  background-color:#4fb95dc0;
   border-radius: 10px 10px 0 0;
   border: 1px solid black;
   border-bottom: none;
@@ -27,8 +27,8 @@
   border-radius: 0 0 10px 10px;
 }
 .post-title {
-  color: blue;
-  text-decoration: underline;
+  color: black;
+  text-transform: uppercase;
   font-weight: bold;
   text-align: left;
   padding-left: 1rem;
